Bundled Themes: Prevent `pre` from overflowing container.
Update CSS to set `overflow-x: auto` on `pre` elements in Twenty Twenty Two and Twenty Twenty Five. 

Props pateljaymin, jaiminp, nikunj8866, sabernhardt, rollybueno, joedolson.
Fixes #63875.
Built from https://develop.svn.wordpress.org/trunk@60921


git-svn-id: http://core.svn.wordpress.org/trunk@60257 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwentyfive/style.css
+++ b/wp-content/themes/twentytwentyfive/style.css
@@ -59,3 +59,11 @@ h1, h2, h3, h4, h5, h6, blockquote, caption, figcaption, p {
 .more-link {
 	display: block;
 }
+
+/*
+ * Prevents unnecessary scrollbars while handling long lines of preformatted text.
+ * https://core.trac.wordpress.org/ticket/63875
+ */
+:where(pre) {
+	overflow-x: auto;
+}
